// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GuideNext renders the default copy on the final guide 1`] = `
<DocumentFragment>
  .emotion-16 {
  color: #13AA52;
}

.emotion-4 {
  overflow: hidden;
  border-radius: 3px;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.emotion-6 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 0;
  margin: 0;
  background-color: transparent;
  border: 0px solid transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  border-radius: 4px;
  -webkit-transition: all 150ms ease-in-out;
  transition: all 150ms ease-in-out;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  z-index: 0;
  background-color: #09804C;
  box-shadow: 0px 2px 3px rgba(19,170,82,0.4);
  color: #FFFFFF;
  font-size: 16px;
  -webkit-transform: translateY(1px);
  -ms-transform: translateY(1px);
  transform: translateY(1px);
  height: 36px;
  margin-bottom: 40px;
}

.emotion-6:focus {
  outline: none;
}

.emotion-6:disabled {
  pointer-events: none;
}

.emotion-6:active,
.emotion-6:focus,
.emotion-6:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-6:focus {
  color: #FFFFFF;
}

.emotion-6:hover,
.emotion-6:active {
  color: #FFFFFF;
  background-color: #116149;
  box-shadow: 0px 2px 3px rgba(19,170,82,0.4),0px 0px 0px 3px #c3e7ca;
}

.emotion-6:focus {
  background-color: #116149;
  box-shadow: 0px 4px 4px rgba(0,124,173,0.4), 0px 0px 0px 3px #019EE2;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  width: 100%;
  pointer-events: none;
  position: relative;
  z-index: 0;
  font-family: Akzidenz,'Helvetica Neue',Helvetica,Arial,sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-left: 12px;
  padding-right: 12px;
}

.emotion-25 {
  position: relative;
  border-radius: 7px;
  -webkit-transition: border 300ms ease-in-out,box-shadow 300ms ease-in-out;
  transition: border 300ms ease-in-out,box-shadow 300ms ease-in-out;
  border: 1px solid #E7EEEC;
  box-shadow: 0 4px 10px -4px rgba(6,22,33,0.3);
  background-color: white;
  color: #21313C;
  padding: 40px 24px;
}

@media not all and (max-width:767px) {
  .emotion-25 {
    padding: 48px;
  }
}

@media not all and (max-width:1023px) {
  .emotion-25 {
    -webkit-flex-basis: 0;
    -ms-flex-preferred-size: 0;
    flex-basis: 0;
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
    min-width: 300px;
    max-width: 510px;
  }
}

.emotion-26 {
  border-top: 1px solid #E7EEEC;
  padding-top: 56px;
}

@media not all and (max-width:1023px) {
  .emotion-26 {
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    gap: 0 34px;
  }
}

.emotion-7 p {
  margin-top: 8px;
}

@media not all and (max-width:1023px) {
  .emotion-7 {
    -webkit-flex-basis: 0;
    -ms-flex-preferred-size: 0;
    flex-basis: 0;
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
  }
}

.emotion-0 {
  color: #5D6C74 !important;
  font-size: 16px !important;
  margin-bottom: 16px;
}

.emotion-2 {
  font-size: 24px;
  font-weight: bold;
}

.emotion-14 {
  margin-bottom: 24px;
}

@media not all and (max-width:767px) {
  .emotion-14 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    gap: 0 16px;
    margin-bottom: 34px;
  }
}

.emotion-10 {
  background-color: #E4F4E4;
  border-radius: 4px;
  color: #13AA52;
  font-size: 14px;
  font-weight: bold;
  height: 24px;
  text-align: center;
  width: 83px;
  margin-bottom: 8px;
}

.emotion-12 {
  color: #061621;
  font-weight: bold;
}

.emotion-23 {
  list-style: none;
  padding-left: 0;
}

.emotion-17 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  border: solid 1px transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-right: 12px;
  min-width: 20px;
  min-height: 20px;
}

.emotion-19 {
  color: #061621;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-19:hover,
.emotion-19:active {
  color: currentColor;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-21 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 40px;
  padding-top: 0 !important;
  position: relative;
}

.emotion-21:not(:last-child) {
  padding-bottom: 16px;
}

.emotion-21:not(:last-child):before {
  content: '';
  position: absolute;
  left: 10px;
  top: 20px;
  height: calc(100% - 20px);
  border-left: solid 1px #13AA52;
}

<div
    class="emotion-26 emotion-27"
  >
    <div
      class="emotion-7 emotion-8"
    >
      <div
        class="emotion-0 emotion-1"
      >
        What's Next
      </div>
      <div
        class="emotion-2 emotion-3"
      >
        Become a MongoDB Professional
      </div>
      <p>
        Congrats. You’ve completed all the guides. Want to take the next step? Register for the developer exam.
      </p>
      <a
        aria-disabled="false"
        class="emotion-6"
        href="https://university.mongodb.com/certification/developer/about"
      >
        <div
          class="emotion-4"
        />
        <div
          class="emotion-5"
        >
          Learn More
        </div>
      </a>
    </div>
    <div
      class="emotion-25"
    >
      <div
        class="emotion-14 emotion-15"
      >
        <div
          class="emotion-9 emotion-10 emotion-11"
        >
          Chapter 2
        </div>
        <div
          class="emotion-12 emotion-13"
        >
          CRUD
        </div>
      </div>
      <ul
        class="emotion-23 emotion-24"
      >
        <li
          class="emotion-21 emotion-22"
          color="#13AA52"
        >
          <div
            class="emotion-17 emotion-18"
            color="transparent"
          >
            <svg
              aria-label="Checkmark Icon"
              class="emotion-16"
              fill="none"
              height="16"
              role="img"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M6.306 9.05l5.455-5.455a1 1 0 011.414 0l.707.707a1 1 0 010 1.414l-7.067 7.068a1 1 0 01-1.5-.098l-3.049-3.97a1 1 0 01.184-1.402l.595-.457a1.25 1.25 0 011.753.23L6.306 9.05z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </div>
          <a
            class="emotion-19 emotion-20"
            href="/server/read/"
          >
            Read Data in MongoDB
          </a>
        </li>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;

exports[`GuideNext renders the first guide in the next chapter 1`] = `
<DocumentFragment>
  .emotion-4 {
  overflow: hidden;
  border-radius: 3px;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.emotion-6 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 0;
  margin: 0;
  background-color: transparent;
  border: 0px solid transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  border-radius: 4px;
  -webkit-transition: all 150ms ease-in-out;
  transition: all 150ms ease-in-out;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  z-index: 0;
  background-color: #09804C;
  box-shadow: 0px 2px 3px rgba(19,170,82,0.4);
  color: #FFFFFF;
  font-size: 16px;
  -webkit-transform: translateY(1px);
  -ms-transform: translateY(1px);
  transform: translateY(1px);
  height: 36px;
  margin-bottom: 40px;
}

.emotion-6:focus {
  outline: none;
}

.emotion-6:disabled {
  pointer-events: none;
}

.emotion-6:active,
.emotion-6:focus,
.emotion-6:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-6:focus {
  color: #FFFFFF;
}

.emotion-6:hover,
.emotion-6:active {
  color: #FFFFFF;
  background-color: #116149;
  box-shadow: 0px 2px 3px rgba(19,170,82,0.4),0px 0px 0px 3px #c3e7ca;
}

.emotion-6:focus {
  background-color: #116149;
  box-shadow: 0px 4px 4px rgba(0,124,173,0.4), 0px 0px 0px 3px #019EE2;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  width: 100%;
  pointer-events: none;
  position: relative;
  z-index: 0;
  font-family: Akzidenz,'Helvetica Neue',Helvetica,Arial,sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-left: 12px;
  padding-right: 12px;
}

.emotion-25 {
  position: relative;
  border-radius: 7px;
  -webkit-transition: border 300ms ease-in-out,box-shadow 300ms ease-in-out;
  transition: border 300ms ease-in-out,box-shadow 300ms ease-in-out;
  border: 1px solid #E7EEEC;
  box-shadow: 0 4px 10px -4px rgba(6,22,33,0.3);
  background-color: white;
  color: #21313C;
  padding: 40px 24px;
}

@media not all and (max-width:767px) {
  .emotion-25 {
    padding: 48px;
  }
}

@media not all and (max-width:1023px) {
  .emotion-25 {
    -webkit-flex-basis: 0;
    -ms-flex-preferred-size: 0;
    flex-basis: 0;
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
    min-width: 300px;
    max-width: 510px;
  }
}

.emotion-26 {
  border-top: 1px solid #E7EEEC;
  padding-top: 56px;
}

@media not all and (max-width:1023px) {
  .emotion-26 {
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    gap: 0 34px;
  }
}

.emotion-7 p {
  margin-top: 8px;
}

@media not all and (max-width:1023px) {
  .emotion-7 {
    -webkit-flex-basis: 0;
    -ms-flex-preferred-size: 0;
    flex-basis: 0;
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
  }
}

.emotion-0 {
  color: #5D6C74 !important;
  font-size: 16px !important;
  margin-bottom: 16px;
}

.emotion-2 {
  font-size: 24px;
  font-weight: bold;
}

.emotion-14 {
  margin-bottom: 24px;
}

@media not all and (max-width:767px) {
  .emotion-14 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    gap: 0 16px;
    margin-bottom: 34px;
  }
}

.emotion-10 {
  background-color: #E4F4E4;
  border-radius: 4px;
  color: #13AA52;
  font-size: 14px;
  font-weight: bold;
  height: 24px;
  text-align: center;
  width: 83px;
  margin-bottom: 8px;
}

.emotion-12 {
  color: #061621;
  font-weight: bold;
}

.emotion-23 {
  list-style: none;
  padding-left: 0;
}

.emotion-21 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 40px;
  padding-top: 0 !important;
  position: relative;
}

.emotion-21:not(:last-child) {
  padding-bottom: 16px;
}

.emotion-21:not(:last-child):before {
  content: '';
  position: absolute;
  left: 10px;
  top: 20px;
  height: calc(100% - 20px);
  border-left: solid 1px #E7EEEC;
}

.emotion-19 {
  color: #061621;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-19:hover,
.emotion-19:active {
  color: currentColor;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-17 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  border: solid 1px #13AA52;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-right: 12px;
  min-width: 20px;
  min-height: 20px;
}

.emotion-16 {
  color: #13AA52;
}

<div
    class="emotion-26 emotion-27"
  >
    <div
      class="emotion-7 emotion-8"
    >
      <div
        class="emotion-0 emotion-1"
      >
        What's Next
      </div>
      <div
        class="emotion-2 emotion-3"
      >
        Read Data in MongoDB
      </div>
      <a
        aria-disabled="false"
        class="emotion-6"
        href="/server/read/"
      >
        <div
          class="emotion-4"
        />
        <div
          class="emotion-5"
        >
          Start Guide
        </div>
      </a>
    </div>
    <div
      class="emotion-25"
    >
      <div
        class="emotion-14 emotion-15"
      >
        <div
          class="emotion-9 emotion-10 emotion-11"
        >
          Chapter 2
        </div>
        <div
          class="emotion-12 emotion-13"
        >
          CRUD
        </div>
      </div>
      <ul
        class="emotion-23 emotion-24"
      >
        <li
          class="emotion-21 emotion-22"
          color="#E7EEEC"
        >
          <div
            class="emotion-17 emotion-18"
            color="#13AA52"
          >
            <svg
              class="emotion-16"
              fill="currentColor"
              height="12"
              viewBox="0 0 7 12"
              width="7"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.47516 3.75H3.95081L4.88268 0.707813C4.97017 0.351563 4.71862 0 4.37518 0H1.22522C0.96272 0 0.739598 0.208594 0.704598 0.4875L0.00460634 6.1125C-0.0369557 6.45 0.208042 6.75 0.525225 6.75H3.12176L2.11333 11.3086C2.03458 11.6648 2.28833 12 2.62301 12C2.80676 12 2.98176 11.8969 3.07801 11.7188L6.92797 4.59375C7.1314 4.22109 6.87984 3.75 6.47516 3.75Z"
              />
            </svg>
          </div>
          <a
            class="emotion-19 emotion-20"
            href="/server/read/"
          >
            Read Data in MongoDB
          </a>
        </li>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;

exports[`GuideNext renders the next guide in the same chapter 1`] = `
<DocumentFragment>
  .emotion-16 {
  color: #13AA52;
}

.emotion-4 {
  overflow: hidden;
  border-radius: 3px;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.emotion-6 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 0;
  margin: 0;
  background-color: transparent;
  border: 0px solid transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  border-radius: 4px;
  -webkit-transition: all 150ms ease-in-out;
  transition: all 150ms ease-in-out;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  z-index: 0;
  background-color: #09804C;
  box-shadow: 0px 2px 3px rgba(19,170,82,0.4);
  color: #FFFFFF;
  font-size: 16px;
  -webkit-transform: translateY(1px);
  -ms-transform: translateY(1px);
  transform: translateY(1px);
  height: 36px;
  margin-bottom: 40px;
}

.emotion-6:focus {
  outline: none;
}

.emotion-6:disabled {
  pointer-events: none;
}

.emotion-6:active,
.emotion-6:focus,
.emotion-6:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-6:focus {
  color: #FFFFFF;
}

.emotion-6:hover,
.emotion-6:active {
  color: #FFFFFF;
  background-color: #116149;
  box-shadow: 0px 2px 3px rgba(19,170,82,0.4),0px 0px 0px 3px #c3e7ca;
}

.emotion-6:focus {
  background-color: #116149;
  box-shadow: 0px 4px 4px rgba(0,124,173,0.4), 0px 0px 0px 3px #019EE2;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  width: 100%;
  pointer-events: none;
  position: relative;
  z-index: 0;
  font-family: Akzidenz,'Helvetica Neue',Helvetica,Arial,sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-left: 12px;
  padding-right: 12px;
}

.emotion-39 {
  position: relative;
  border-radius: 7px;
  -webkit-transition: border 300ms ease-in-out,box-shadow 300ms ease-in-out;
  transition: border 300ms ease-in-out,box-shadow 300ms ease-in-out;
  border: 1px solid #E7EEEC;
  box-shadow: 0 4px 10px -4px rgba(6,22,33,0.3);
  background-color: white;
  color: #21313C;
  padding: 40px 24px;
}

@media not all and (max-width:767px) {
  .emotion-39 {
    padding: 48px;
  }
}

@media not all and (max-width:1023px) {
  .emotion-39 {
    -webkit-flex-basis: 0;
    -ms-flex-preferred-size: 0;
    flex-basis: 0;
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
    min-width: 300px;
    max-width: 510px;
  }
}

.emotion-40 {
  border-top: 1px solid #E7EEEC;
  padding-top: 56px;
}

@media not all and (max-width:1023px) {
  .emotion-40 {
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    gap: 0 34px;
  }
}

.emotion-7 p {
  margin-top: 8px;
}

@media not all and (max-width:1023px) {
  .emotion-7 {
    -webkit-flex-basis: 0;
    -ms-flex-preferred-size: 0;
    flex-basis: 0;
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
  }
}

.emotion-0 {
  color: #5D6C74 !important;
  font-size: 16px !important;
  margin-bottom: 16px;
}

.emotion-2 {
  font-size: 24px;
  font-weight: bold;
}

.emotion-14 {
  margin-bottom: 24px;
}

@media not all and (max-width:767px) {
  .emotion-14 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    gap: 0 16px;
    margin-bottom: 34px;
  }
}

.emotion-10 {
  background-color: #E4F4E4;
  border-radius: 4px;
  color: #13AA52;
  font-size: 14px;
  font-weight: bold;
  height: 24px;
  text-align: center;
  width: 83px;
  margin-bottom: 8px;
}

.emotion-12 {
  color: #061621;
  font-weight: bold;
}

.emotion-37 {
  list-style: none;
  padding-left: 0;
}

.emotion-28 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 40px;
  padding-top: 0 !important;
  position: relative;
}

.emotion-28:not(:last-child) {
  padding-bottom: 16px;
}

.emotion-28:not(:last-child):before {
  content: '';
  position: absolute;
  left: 10px;
  top: 20px;
  height: calc(100% - 20px);
  border-left: solid 1px #E7EEEC;
}

.emotion-17 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  border: solid 1px transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-right: 12px;
  min-width: 20px;
  min-height: 20px;
}

.emotion-30 {
  color: #3D4F58;
}

.emotion-19 {
  color: #061621;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-19:hover,
.emotion-19:active {
  color: currentColor;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-24 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  border: solid 1px #13AA52;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-right: 12px;
  min-width: 20px;
  min-height: 20px;
}

.emotion-23 {
  color: #13AA52;
}

.emotion-21 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 40px;
  padding-top: 0 !important;
  position: relative;
}

.emotion-21:not(:last-child) {
  padding-bottom: 16px;
}

.emotion-21:not(:last-child):before {
  content: '';
  position: absolute;
  left: 10px;
  top: 20px;
  height: calc(100% - 20px);
  border-left: solid 1px #13AA52;
}

<div
    class="emotion-40 emotion-41"
  >
    <div
      class="emotion-7 emotion-8"
    >
      <div
        class="emotion-0 emotion-1"
      >
        What's Next
      </div>
      <div
        class="emotion-2 emotion-3"
      >
        Set Up Atlas Connectivity
      </div>
      <a
        aria-disabled="false"
        class="emotion-6"
        href="/cloud/connectionstring/"
      >
        <div
          class="emotion-4"
        />
        <div
          class="emotion-5"
        >
          Start Guide
        </div>
      </a>
    </div>
    <div
      class="emotion-39"
    >
      <div
        class="emotion-14 emotion-15"
      >
        <div
          class="emotion-9 emotion-10 emotion-11"
        >
          Chapter 1
        </div>
        <div
          class="emotion-12 emotion-13"
        >
          Atlas
        </div>
      </div>
      <ul
        class="emotion-37 emotion-38"
      >
        <li
          class="emotion-21 emotion-22"
          color="#13AA52"
        >
          <div
            class="emotion-17 emotion-18"
            color="transparent"
          >
            <svg
              aria-label="Checkmark Icon"
              class="emotion-16"
              fill="none"
              height="16"
              role="img"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M6.306 9.05l5.455-5.455a1 1 0 011.414 0l.707.707a1 1 0 010 1.414l-7.067 7.068a1 1 0 01-1.5-.098l-3.049-3.97a1 1 0 01.184-1.402l.595-.457a1.25 1.25 0 011.753.23L6.306 9.05z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </div>
          <a
            class="emotion-19 emotion-20"
            href="/cloud/account/"
          >
            Create and Manage a MongoDB Account
          </a>
        </li>
        <li
          class="emotion-28 emotion-22"
          color="#E7EEEC"
        >
          <div
            class="emotion-24 emotion-18"
            color="#13AA52"
          >
            <svg
              class="emotion-23"
              fill="currentColor"
              height="12"
              viewBox="0 0 7 12"
              width="7"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.47516 3.75H3.95081L4.88268 0.707813C4.97017 0.351563 4.71862 0 4.37518 0H1.22522C0.96272 0 0.739598 0.208594 0.704598 0.4875L0.00460634 6.1125C-0.0369557 6.45 0.208042 6.75 0.525225 6.75H3.12176L2.11333 11.3086C2.03458 11.6648 2.28833 12 2.62301 12C2.80676 12 2.98176 11.8969 3.07801 11.7188L6.92797 4.59375C7.1314 4.22109 6.87984 3.75 6.47516 3.75Z"
              />
            </svg>
          </div>
          <a
            class="emotion-19 emotion-20"
            href="/cloud/connectionstring/"
          >
            Set Up Atlas Connectivity
          </a>
        </li>
        <li
          class="emotion-28 emotion-22"
          color="#E7EEEC"
        >
          <div
            class="emotion-17 emotion-18"
            color="transparent"
          >
            <svg
              class="emotion-30"
              fill="currentColor"
              height="12"
              viewBox="0 0 7 12"
              width="7"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.47516 3.75H3.95081L4.88268 0.707813C4.97017 0.351563 4.71862 0 4.37518 0H1.22522C0.96272 0 0.739598 0.208594 0.704598 0.4875L0.00460634 6.1125C-0.0369557 6.45 0.208042 6.75 0.525225 6.75H3.12176L2.11333 11.3086C2.03458 11.6648 2.28833 12 2.62301 12C2.80676 12 2.98176 11.8969 3.07801 11.7188L6.92797 4.59375C7.1314 4.22109 6.87984 3.75 6.47516 3.75Z"
              />
            </svg>
          </div>
          <a
            class="emotion-19 emotion-20"
            href="/cloud/migrate-from-aws-to-atlas/"
          >
            Migrate a MongoDB Replicate Set from AWS to MongoDB Atlas
          </a>
        </li>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;
